2002-08-31  Phil Edwards  <pme@gcc.gnu.org>

	* acinclude.m4:  Minor comment tweaks.

	* docs/html/makedoc.awk:  New file...
	* docs/html/Makefile:  ...called from here...
	* docs/html/documentation.html:  ...to help generate this.

	* docs/html/21_strings/howto.html:  Prepare for new entry.
	* include/bits/basic_string.h:  Initial basic_stirng hook for
	doxygen.  Remove trailing whitespace.
	* include/bits/char_traits.h:  Point to onlinedocs for new entry.
	* include/bits/stringfwd.h:  Add doxygen hooks for string and
	wstring typedefs.

2002-08-29  Richard Earnshaw  <rearnshaw@arm.com>

	* config/cpu/arm/cpu_limits.h: New file.
	* configure.target: Use config/cpu/arm for XScale and StrongARM
	configurations.

2002-08-28  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* include/std/std_limits.h (__glibcpp_char_bits,
	__glibcpp_short_bits, __glibcpp_int_bits, __glibcpp_long_bits,
	__glibcpp_long_long_bits, __glibcpp_float_bits,
	__glibcpp_double_bits, __glibcpp_long_double_bits): Remove.  Use
	compiler predifined macros.
	(__glibcpp_wchar_t_is_signed): Define based on compiler predefined
	__WCHAR_UNSIGNED__. 

2002-08-27  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* include/std/std_limits.h (__glibcpp_f32_infinity_bytes,
	__glibcpp_f32_has_infinity, __glibcpp_f32_QNaN_bytes,
	__glibcpp_f32_has_QNaN, __glibcpp_f32_SNaN_bytes,
	__glibcpp_f32_has_SNaN, __glibcpp_f32_denorm_min_bytes,
	__glibcpp_f32_has_denorm, __glibcpp_f32_is_iec559,
	__glibcpp_f64_infinity_bytes,
	__glibcpp_f64_has_infinity, __glibcpp_f64_QNaN_bytes,
	__glibcpp_f64_has_QNaN, __glibcpp_f64_SNaN_bytes,
	__glibcpp_f64_has_SNaN, __glibcpp_f64_denorm_min_bytes,
	__glibcpp_f64_has_denorm, __glibcpp_f64_is_iec559,
	__glibcpp_f80_infinity_bytes,
	__glibcpp_f80_has_infinity, __glibcpp_f80_QNaN_bytes,
	__glibcpp_f80_has_QNaN, __glibcpp_f80_SNaN_bytes,
	__glibcpp_f80_has_SNaN, __glibcpp_f80_denorm_min_bytes,
	__glibcpp_f80_has_denorm, __glibcpp_f80_is_iec559,
	__glibcpp_f96_infinity_bytes,