@@ -249,8 +249,6 @@ int main(int argc, char** argv)
    "%s:%s\n", $4, $8; else if ($4 == "OBJECT") printf "%s:%s:%s\n", $4,
    $3, $8;}' | sort >& current_symbols.txt
    */
-  const char quote = '"';
-  const char bslash = '\\';
 
   // GNU binutils, somewhere after version 2.11.2, requires -W/--wide
   // to avoid default line truncation.  -W is not supported and
@@ -259,15 +257,13 @@ int main(int argc, char** argv)
     (system("readelf --help | grep -- --wide >/dev/null") == 0);
 
   ostringstream cmd;
-  cmd << "readelf -s " << (readelf_need_wide ? "-W " : "")
-      << test_lib << " | sed '/" << bslash 
-      << ".dynsym/,/^$/p;d' | egrep -v ' (LOCAL|UND) ' | "
-      << "awk '{ if ($4 == " << quote << "FUNC" << quote << "|| $4 == " 
-      << quote << "NOTYPE" << quote << ") printf " << quote << "%s:%s"
-      << bslash << "n" << quote << ", $4, $8; else if ($4 == " 
-      << quote << "OBJECT" << quote << ") printf " << quote
-      << "%s:%s:%s" << bslash << "n" << quote << ", $4, $3, $8;}' | "
-      << "sort > " << test_file << " 2>&1";
+  cmd << "readelf -s " << (readelf_need_wide ? "-W " : "") << test_lib
+      << " | sed '/\\.dynsym/,/^$/p;d' | egrep -v ' (LOCAL|UND) ' | "
+         "awk '{ if ($4 == \"FUNC\" || $4 == \"NOTYPE\") "
+                   "printf \"%s:%s\\n\", $4, $8; "
+                 "else if ($4 == \"OBJECT\") "
+                   "printf \"%s:%s:%s\\n\", $4, $3, $8;}' | sort > "
+      << test_file << " 2>&1";
   if (system(cmd.str().c_str()) != 0)
     {
       cerr << "Unable to generate the list of exported symbols." << endl;
