@@ -1,3 +1,11 @@
+2002-09-01  Phil Edwards  <pme@gcc.gnu.org>
+
+	* testsuite/Makefile.am:  Use LD_RUN_PATH when linking abi_check.
+	Fix spelling in comment.
+	* testsuite/Makefile.in:  Regenerate.
+	* testsuite/abi_check.cc:  Use string literals to build 'cmd' rather
+	than 'quote' and 'bslash'.
+
 2002-08-31  Phil Edwards  <pme@gcc.gnu.org>
 
 	* acinclude.m4:  Minor comment tweaks.
